Cambio a RE9 ya entra en la interrupción

--- a/Trabajo_dsPIC.X/nbproject/Makefile-genesis.properties
+++ b/Trabajo_dsPIC.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Tue Apr 16 12:48:59 CEST 2024
+#Tue Apr 16 17:31:52 CEST 2024
 default.languagetoolchain.version=2.10
-default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/dsPIC33CH-MP_DFP/1.15.378
+default.Pack.dfplocation=
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc16/v2.10/bin
 host.id=0
-configurations-xml=24e5cf2c68668ceee686e98baf9c4dd4
+configurations-xml=c92f5a2abd91d7ed184da786a27bd439
 default.com-microchip-mplab-mdbcore-pkobskde-PKOBSKDEDbgToolManager.md5=63f4fd388e64d7b773ab36f1bf318004
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 proj.dir=/Users/jorge/Desktop/Trabajo_dsPIC/Trabajo_dsPIC.X
