--- a/Trabajo_dsPIC.X/nbproject/Makefile-genesis.properties
+++ b/Trabajo_dsPIC.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Apr 22 14:15:41 CEST 2024
+#Tue May 14 21:35:37 CEST 2024
 default.languagetoolchain.version=2.10
-default.Pack.dfplocation=
+default.Pack.dfplocation=C\:\\Users\\jorge\\.mchp_packs\\Microchip\\dsPIC33CH-MP_DFP\\1.11.240
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc16/v2.10/bin
-host.id=0
-configurations-xml=c92f5a2abd91d7ed184da786a27bd439
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v2.10\\bin
+host.id=1c0k-cwj2-2n
+configurations-xml=0fd4ab9090c8ba0c8f1489a91b19f723
 default.com-microchip-mplab-mdbcore-pkobskde-PKOBSKDEDbgToolManager.md5=63f4fd388e64d7b773ab36f1bf318004
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
-proj.dir=/Users/jorge/Desktop/Trabajo_dsPIC/Trabajo_dsPIC.X
-host.platform=mac
+proj.dir=C\:\\Users\\jorge\\Documents\\Trabajo_dsPIC\\Trabajo_dsPIC.X
+host.platform=windows
 default.com-microchip-mplab-nbide-toolchain-xc16-XC16LanguageToolchain.md5=8eccc0331d50afc5c6c0f2b052f25482
